hphp/hack/test/typecheck/reified_generics/valid_targ_wildcard_call.php.exp
File "valid_targ_wildcard_call.php", line 9, characters 7-7:
Wildcard typehints are not allowed in this position (Naming[2084])
File "valid_targ_wildcard_call.php", line 8, characters 5-5:
_ is a wildcard, it cannot be used as a reified type argument (Typing[4305])
  File "valid_targ_wildcard_call.php", line 5, characters 18-19:
  Tf is reified
